# vagent2

./: .gitignore  .travis.yml  INSTALL  INSTALL.rst  LICENSE  Makefile.am  NEWS.rst  README.rst  THANKS  TODO  Vagrantfile  autogen.sh  autogen_mac.sh  configure.ac
debian/: .gitignore  changelog  control  copyright  default  dirs  init  postinst  rules  rules.nosystemd  varnish-agent.install  varnish-agent.service
docs/: LOG-API.rst
html/: agent.js  index.html  index2.html  varnishstat.html
html/css/: switch.css  varnishstat.css
html/js/: agent.js  varnishstat.js
include/: Makefile.am  base64.h  common.h  helpers.h  http.h  httpd.h  ipc.h  main.h  pidfile.h  plugin-list.h  plugins.h  varnishadm.h  vss-hack.h
redhat/: varnish-agent.initrc  varnish-agent.params  varnish-agent.service  varnish-agent.spec  varnish-agent.sysconfig
src/: Makefile.am  echo.c  helpers.c  html.c  httpd.c  ipc.c  logd.c  main.c  params.c  pidfile.c  pingd.c  plugins.c  status.c  varnishadm.c  vcl.c  vsb.c  vss.c
src/foreign/: base64.c  pidfile.c  vsb.c  vss.c
src/modules/: ban.c  curl.c  echo.c  html.c  http.c  httpd.c  logd.c  logger.c  params.c  pingd.c  status.c  vac_register.c  vadmin.c  varnishadm.c  varnishstat.c  vbackends.c  vban.c  vcl.c  vcurl.c  vdirect.c  vlog.c  vparams.c  vping.c  vstat.c  vstatus.c
tests/: Makefile.am  README  arguments.sh  authfail.sh  authorize.sh  backendhealth.sh  badvarnishd.sh  ban.sh  ban.vtc  buffers.sh  core.sh  echo.sh  empty_response_backend.py  http.sh  json.sh  jsonlint.py  log.sh  multi.sh  readonly.sh  server.sh  smallvcl  status.sh  test-wrapper  test1.sh  test2.sh  test_all.sh  test_all_auto.sh  util.sh  vac_register.sh  vbackends.sh  vcl.sh  vdirect.sh  vdirect.vtc  vpush.sh
tests/data/: 1.3M  boot.vcl  longvcl  smallvcl
tests/integration/: Dockerfile  Vagrantfile  test.sh
tests/integration/testcases/: 108.sh
